[package]
name = "midlware"
license = "MIT"
description = "A short description of my package"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0.0"
serde = "1.0.105"
serde_json = "1.0.48"
jsonwebtoken = "7.1.0"
bson = "0.14.1"
futures = "0.3.4"
envfile = "0.2.1"
chrono = "0.4.11"
